Added playing-card html element, for showing cards, and much more refactoring and working on blackjack implementation